[package]
name = "unittest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tempdir = "0.3.7"
like-shell = "0.2.8"
candid = "0.10.8"
ic-agent = "0.36.0"
serde_json = "1.0.117"
tokio = { version = "1.37.0",features = ["macros"] }
reqwest = "0.12.4"
# derive_more = "0.99.17"
# env_logger = "0.11.3"
log = "0.4.21"
# thiserror = "1.0.61"
